--- a/queries.css
+++ b/queries.css
@@ -1,7 +1,7 @@
 @media (max-width: 1000px) {
   body {
     flex-direction: column;
-    padding: 0;
+    padding: 0 !important;
   }
 
   .sidebar {
