--- a/queries.css
+++ b/queries.css
@@ -7,7 +7,10 @@
   .sidebar {
     height: 40vh;
     flex-basis: 40vh;
-    padding: 0.5rem 2rem 1rem 2rem;
+    padding: 0.5rem 2rem 1rem 2rem !important;
+  }
+  .logo {
+    height: 3rem !important;
   }
   /* #map {
     height: 50vh;
