--- a/queries.css
+++ b/queries.css
@@ -17,3 +17,13 @@
     height: 50vh;
   } */
 }
+@media (max-width: 420px) {
+  html {
+    font-size: 50%;
+  }
+}
+@media (max-width: 360px) {
+  html {
+    font-size: 40%;
+  }
+}
